--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dependencies": {
         "commander": "^1.3.2",
         "mkdirp": "^0.3.5",
-        "ejs": "~0.8.4"
+        "ejs": "*"
     },
     "keywords": [
         "koa",
